# ChangeLog for sys-apps/tcp-wrappers
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.38 2006/12/11 02:50:13 flameeyes Exp $

  11 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Fix links for libwrap.so library, see bug #157789; okay'd by Luca Barbato.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  Added ~sparc-fbsd keyword.

  04 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Add ~x86-fbsd keyword.

  15 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  get_libdir love for multilib archs.

  13 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Fix cross-compiling and remove USE=static ... always build shared libraries.

  16 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  error check sed; use emake; modify Makefile to make parallel-friendly

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  tcp-wrappers-7.6-r3.ebuild, tcp-wrappers-7.6-r4.ebuild,
  tcp-wrappers-7.6-r6.ebuild, tcp-wrappers-7.6-r8.ebuild:
  virtual/glibc -> virtual/libc

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> tcp-wrappers-7.6-r6.ebuild:
  QA - fix use invocation

  09 Apr 2004; Travis Tilley <lv@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on amd64

  29 Mar 2004; <randy@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  adding s390 keywords

  09 Mar 2004; <agriffis@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on alpha and ia64

  07 Mar 2004; Joshua Kinard <kumba@gentoo.org> tcp-wrappers-7.6-r3.ebuild,
  tcp-wrappers-7.6-r4.ebuild, tcp-wrappers-7.6-r8.ebuild:
  Marked stable on mips, copyright header fixes.

  09 Feb 2004; <gustavoz@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  stable on sparc

  09 Feb 2004; Guy Martin <gmsoft@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  Marked stable on hppa.
