@@ -1,0 +1,6 @@
+MD5 e40c4f8f90c274af23a38a698b6d1695 tcp-wrappers-7.6-patches-1.0.tar.bz2 16128
+RMD160 ff714d5d91d1d59ce7824859e66a2ad1b2f9c452 tcp-wrappers-7.6-patches-1.0.tar.bz2 16128
+SHA256 dcb10f194684b16ae6aa9faf05dd8b063d81a3dde1431b664260dcf385089256 tcp-wrappers-7.6-patches-1.0.tar.bz2 16128
+MD5 e6fa25f71226d090f34de3f6b122fb5a tcp_wrappers_7.6.tar.gz 99438
+RMD160 f592fec30f8b76ce8790182185dde709871095e0 tcp_wrappers_7.6.tar.gz 99438
+SHA256 9543d7adedf78a6de0b221ccbbd1952e08b5138717f4ade814039bb489a4315d tcp_wrappers_7.6.tar.gz 99438
