@@ -1,53 +1,43 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/tcp-wrappers-7.6-r8.ebuild,v 1.23 2006/12/29 22:13:04 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/tcp-wrappers-7.6-r8.ebuild,v 1.24 2007/01/17 03:22:59 vapier Exp $
 
 EAPI="prefix"
 
 inherit eutils toolchain-funcs
 
 MY_P="${P//-/_}"
-S="${WORKDIR}/${MY_P}"
+PATCH_VER="1.0"
 DESCRIPTION="TCP Wrappers"
 HOMEPAGE="ftp://ftp.porcupine.org/pub/security/index.html"
 SRC_URI="ftp://ftp.porcupine.org/pub/security/${MY_P}.tar.gz
-	mirror://gentoo/${PF}-patches.tar.bz2"
+	mirror://gentoo/${P}-patches-${PATCH_VER}.tar.bz2"
 
 LICENSE="tcp_wrappers_license"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="ipv6"
 
-RDEPEND="virtual/libc"
-DEPEND="${RDEPEND}
-	>=sys-apps/sed-4"
+DEPEND=""
+
+S=${WORKDIR}/${MY_P}
 
 src_unpack() {
 	unpack ${A}
-	cd ${S}
+	cd "${S}"
 
 	chmod ug+w Makefile
-	sed -i \
-		-e "s:-O:${CFLAGS}:" \
-		-e "s:AUX_OBJ=.*:AUX_OBJ= \\\:" \
-		Makefile || die "makefile patch prep"
 
-	PATCHDIR=${WORKDIR}/${PV}-patches
-	epatch ${PATCHDIR}/${P}-makefile.patch.bz2
+	EPATCH_SUFFIX="patch"
+	PATCHDIR=${WORKDIR}/${PV}
+	epatch ${PATCHDIR}/${P}-makefile.patch
 	epatch ${PATCHDIR}/generic
-	epatch ${PATCHDIR}/${P}-shared.patch.bz2
-	use ipv6 && epatch ${PATCHDIR}/${P}-ipv6-1.14.diff.bz2
-
-	# make it parallel/cross-compile friendly.
-	sed -i \
-		-e 's:gcc:$(CC):' \
-		-e 's:@make :@$(MAKE) :' \
-		-e 's:make;:$(MAKE);:' \
-		Makefile || die "sed Makefile failed"
+	epatch ${PATCHDIR}/${P}-shared.patch
+	use ipv6 && epatch ${PATCHDIR}/${P}-ipv6-1.14.diff
 }
 
 src_compile() {
-	tc-export CC
+	tc-export AR CC RANLIB
 
 	local myconf="-DHAVE_WEAKSYMS"
 	use ipv6 && myconf="${myconf} -DINET6=1 -Dss_family=__ss_family -Dss_len=__ss_len"
@@ -69,8 +59,8 @@ src_install() {
 	dosbin tcpd tcpdchk tcpdmatch safe_finger try-from || die
 
 	doman *.[358]
-	dosym hosts_access.5.gz /usr/share/man/man5/hosts.allow.5.gz
-	dosym hosts_access.5.gz /usr/share/man/man5/hosts.deny.5.gz
+	dosym hosts_access.5 /usr/share/man/man5/hosts.allow.5
+	dosym hosts_access.5 /usr/share/man/man5/hosts.deny.5
 
 	insinto /usr/include
 	doins tcpd.h
