@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/tcp-wrappers
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.38 2006/12/11 02:50:13 flameeyes Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.39 2007/01/17 03:22:59 vapier Exp $
+
+  17 Jan 2007; Mike Frysinger <vapier@gentoo.org>
+  tcp-wrappers-7.6-r8.ebuild:
+  Cleanup ebuild/source/patchsets.
 
   11 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   tcp-wrappers-7.6-r8.ebuild:
